# reveal

./: .gitignore  AGENT_HELP_FULL.md  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  PIPELINE_DESIGN.md  PUBLISHING.md  README.md  RELEASING.md  ROADMAP.md  SECURITY.md  WINDOWS_VALIDATION.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml  test.yml
docs/: AGENT_HELP_STANDARD.md  ARCHITECTURE.md  DEVELOPMENT.md  PLUGIN_GUIDE.md  PROJECT_STATUS.md  SEMANTIC_NAVIGATION.md  SLOPPY_DETECTORS_DESIGN.md
reveal/: AGENT_HELP.md  __init__.py  base.py  cli.py  core.py  detectors.py  formatters.py  main.py  tree_view.py  treesitter.py  types.py
reveal/_archive_old_v0.1/: breadcrumbs.py  cli.py  core.py  formatters.py  grep_filter.py  plugin_loader.py  registry.py
reveal/_archive_old_v0.1/analyzers/: __init__.py  base.py  bash_analyzer.py  csharp_analyzer.py  gdscript_analyzer.py  go_analyzer.py  javascript_analyzer.py  json_analyzer.py  markdown_analyzer.py  php_analyzer.py  rust_analyzer.py  text_analyzer.py  treesitter_base.py  yaml_analyzer.py
reveal/adapters/: __init__.py  base.py  env.py
reveal/analyzers/: __init__.py  bash.py  gdscript.py  go.py  javascript.py  json_analyzer.py  jsonl.py  jupyter_analyzer.py  markdown.py  nginx.py  python.py  python_analyzer.py  rust.py  sql_analyzer.py  toml_analyzer.py  typescript.py  yaml_analyzer.py  yaml_json.py
reveal/rules/: __init__.py  base.py
reveal/rules/bugs/: B001.py  __init__.py
reveal/rules/complexity/: C901.py  __init__.py
reveal/rules/errors/: E501.py  __init__.py
reveal/rules/infrastructure/: __init__.py
reveal/rules/maintainability/: __init__.py
reveal/rules/performance/: __init__.py
reveal/rules/refactoring/: R913.py  __init__.py
reveal/rules/security/: S701.py  __init__.py
reveal/rules/urls/: U501.py  __init__.py
reveal/tests/: __init__.py  test_json_yaml_line_numbers.py  test_line_numbers.py  test_semantic_navigation.py  test_toml_analyzer.py
tests/: test_cli.py  test_core.py  test_detectors.py  test_jupyter_analyzer.py  test_main_cli.py  test_new_analyzers.py  test_nginx_analyzer.py  test_plugin_loader.py  test_python_analyzer.py  test_windows_compat.py
tests/samples/: HelloWorld.java  hello.c
validation_samples/: analysis.ipynb  calculator.rs  player.gd  sample.py  server.go
